--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-   background: #222; 
+   background: rgb(126, 139, 169); 
 }
 .card{
     width: 90%;
@@ -82,3 +82,15 @@ body{
 .humidity , .wind {
     font-size: 28px;
     margin-top:-6px ;
+}
+.weather{
+    display: none;
+}
+.error{
+    margin-top: 10px;
+    text-align: left;
+    margin-left: 19px;
+    color: red;
+    font-size: 20px;
+    display: none;
+}
