--- a/style.css
+++ b/style.css
@@ -1,30 +1,35 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: "poppins" , sans-serif;
+    font-family: "poppins", sans-serif;
     box-sizing: border-box;
 }
-body{
-   background: rgb(126, 139, 169); 
+
+body {
+    background: rgb(114, 132, 174);
 }
-.card{
+
+.card {
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg , #798fff , #a09cba);
+    background: linear-gradient(135deg, #6d85ff, #a09cba);
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
+    box-shadow: inset 1px 1px 10px #a9a9ac;
 }
-.search{
+
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
-.search input{
+
+.search input {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -37,56 +42,68 @@ body{
     font-size: 18px;
 
 }
-.search button{
+
+.search button {
     border: 0;
     outline: 0;
     background: #ebfffc;
-    border-radius:50% ;
+    border-radius: 50%;
     width: 60px;
     height: 60px;
     cursor: pointer;
 }
-.search button img{
+
+.search button img {
     width: 16px;
 }
-.weather-icon{
+
+.weather-icon {
     width: 170px;
     margin-top: 30px;
 }
-.weather h1{
+
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
 }
-.weather h2{
+
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
-    margin: top -10px; 
+    margin: top -10px;
 }
-.details{
+
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
 }
-.colmn{
+
+.colmn {
     display: flex;
     align-items: center;
     text-align: left;
 
 }
+
 .colmn img {
     width: 40px;
     margin-right: 10px;
 }
-.humidity , .wind {
+
+.humidity,
+.wind {
     font-size: 28px;
-    margin-top:-6px ;
+    margin-top: -6px;
 }
-.weather{
+
+.weather {
     display: none;
 }
-.error{
+
+.error {
     margin-top: 10px;
     text-align: left;
     margin-left: 19px;
